--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1465,25 +1465,27 @@ ul.depth li:before {
 }
 
 #contact-form input[type="submit"],
-.comment-form input[type="submit"] {
-    width: 100%;
-    text-align: center;
-    color: #000;
-    font-size: 14px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    padding: 19px;
-    background: #ffed27;
-    text-transform: uppercase;
-    border: none;
-    transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
+.comment-form input[type="submit"],
+.main-button {
+    width: 100% !important;
+    text-align: center !important;
+    color: #000 !important;
+    font-size: 14px !important;
+    font-family: 'Roboto', sans-serif !important;
+    font-weight: 300 !important;
+    padding: 19px !important;
+    background: #ffed27 !important;
+    text-transform: uppercase !important;
+    border: none !important;
+    transition: all 0.2s ease-in-out !important;
+    -moz-transition: all 0.2s ease-in-out !important;
+    -webkit-transition: all 0.2s ease-in-out !important;
+    -o-transition: all 0.2s ease-in-out !important;
 }
 
 #contact-form input[type="submit"]:hover,
-.comment-form input[type="submit"]:hover {
+.comment-form input[type="submit"]:hover,
+.main-button:hover {
     opacity: 0.8;
 }
 
